[gd_scene load_steps=6 format=3 uid="uid://dxk5qn7yt8ov3"]

[ext_resource type="Script" uid="uid://ckh7es3ntngpq" path="res://scripts/MainMenu.gd" id="2_script"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_normal"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hover"]
bg_color = Color(1, 1, 1, 0.1)
border_width_left = 6
border_color = Color(0.92, 0.35, 0.65, 1)
corner_radius_top_right = 8
corner_radius_bottom_right = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pressed"]
bg_color = Color(0.92, 0.35, 0.65, 0.2)
border_width_left = 6
border_color = Color(0.92, 0.35, 0.65, 1)
corner_radius_top_right = 8
corner_radius_bottom_right = 8

[node name="MainMenuUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_script")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 6

[node name="Overlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.2)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 120
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 80
theme_override_constants/margin_bottom = 80

[node name="ContentVBox" type="VBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(450, 0)
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/separation = 40

[node name="TitleBox" type="VBoxContainer" parent="MarginContainer/ContentVBox"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="MarginContainer/ContentVBox/TitleBox"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.5)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 4
theme_override_font_sizes/font_size = 96
text = "EquestrAI"


[node name="MenuVBox" type="VBoxContainer" parent="MarginContainer/ContentVBox"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="ResumeButton" type="Button" parent="MarginContainer/ContentVBox/MenuVBox"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = SubResource("StyleBoxEmpty_normal")
theme_override_styles/hover = SubResource("StyleBoxFlat_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_pressed")
theme_override_styles/focus = SubResource("StyleBoxEmpty_normal")
text = "Resume Game"
alignment = 0

[node name="QuickStartButton" type="Button" parent="MarginContainer/ContentVBox/MenuVBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = SubResource("StyleBoxEmpty_normal")
theme_override_styles/hover = SubResource("StyleBoxFlat_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_pressed")
theme_override_styles/focus = SubResource("StyleBoxEmpty_normal")
text = "Quick Start"
alignment = 0

[node name="CustomStartButton" type="Button" parent="MarginContainer/ContentVBox/MenuVBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = SubResource("StyleBoxEmpty_normal")
theme_override_styles/hover = SubResource("StyleBoxFlat_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_pressed")
theme_override_styles/focus = SubResource("StyleBoxEmpty_normal")
text = "Custom Start"
alignment = 0

[node name="DebugStartButton" type="Button" parent="MarginContainer/ContentVBox/MenuVBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = SubResource("StyleBoxEmpty_normal")
theme_override_styles/hover = SubResource("StyleBoxFlat_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_pressed")
theme_override_styles/focus = SubResource("StyleBoxEmpty_normal")
text = "Debug Start"
alignment = 0

[node name="OptionsButton" type="Button" parent="MarginContainer/ContentVBox/MenuVBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = SubResource("StyleBoxEmpty_normal")
theme_override_styles/hover = SubResource("StyleBoxFlat_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_pressed")
theme_override_styles/focus = SubResource("StyleBoxEmpty_normal")
text = "Options"
alignment = 0

[node name="QuitButton" type="Button" parent="MarginContainer/ContentVBox/MenuVBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = SubResource("StyleBoxEmpty_normal")
theme_override_styles/hover = SubResource("StyleBoxFlat_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_pressed")
theme_override_styles/focus = SubResource("StyleBoxEmpty_normal")
text = "Quit Game"
alignment = 0
